--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 12 Pro (15.5)\"",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-video": "^5.2.0",
     "react-redux": "^8.0.1",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0"
@@ -41,6 +42,7 @@
     "@types/jest": "^28.1.4",
     "@types/react": "^18.0.8",
     "@types/react-native": "^0.69.3",
+    "@types/react-native-video": "^5.0.14",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
