--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^13.4.0",
     "react-native-video": "^5.2.0",
     "react-redux": "^8.0.1",
     "redux-flipper": "^2.0.1",
