--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.0",
     "react-redux": "^8.0.1",
     "redux-flipper": "^2.0.1",
@@ -43,6 +44,7 @@
     "@types/jest": "^28.1.4",
     "@types/react": "^18.0.8",
     "@types/react-native": "^0.69.3",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-native-video": "^5.0.14",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
