add firebase core

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ platform :ios, '12.0'
 
 target 'appClone' do
   config = use_native_modules!
-  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
   pod 'FirebaseCoreInternal', :modular_headers => true
   pod 'GoogleUtilities', :modular_headers => true
 
