--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/storage": "^16.4.6",
     "@react-native-google-signin/google-signin": "^9.0.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
