add fire storage

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,7 @@ platform :ios, '12.0'
 target 'appClone' do
   config = use_native_modules!
   pod 'FirebaseCore', :modular_headers => true
-  pod 'FirebaseCoreInternal', :modular_headers => true
+  # pod 'FirebaseCoreInternal', :modular_headers => true
   pod 'GoogleUtilities', :modular_headers => true
   pod 'FirebaseAppCheckInterop', :modular_headers => true
   pod 'FirebaseAuthInterop', :modular_headers => true
