--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-flipper": "^0.143.0",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
